--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <div class="column">
 
 <div data-intro="This contains information you gathered about this person" id="brust-card">
-    <h2 class="dosje-headding">Dosje Details</h2>
-    <div data-intro="This is salary , that person is interested in - you can edit it by double click on this block" class="salary-block"><span class="salary_span">Requested Sallary: 0</span></div>
-    <div data-intro="Here are tasks that you have to do , or what you have done with candidate" class="burst-card"></div>
-    <div data-intro="This is comment block , here you can see last 5 comments about this person" class="dosje-coments">
-        <h3>Comments:</h3>
-        <p scope="row"><span vac="headtitle" class="fromNow">a month ago</span>  :  Frontend Developer at Picanova GmbH</p></div>
-    <div class="dosje-buttons"></div>
+   <h2 class="dosje-headding">Dosje Details</h2>
+   <div data-intro="This is salary , that person is interested in - you can edit it by double click on this block" class="salary-block"><span class="salary_span">Requested Sallary: 0</span></div>
+   <div data-intro="Here are tasks that you have to do , or what you have done with candidate" class="burst-card"><br><p scope="row" data-step="5" data-intro="Information and tasks for every vacancy (in this case Tester position)" style="margin-bottom:5px;"><span class="descr">Vacancy:</span> <b>Tester position</b><br><span class="descr">Keywords:</span><font color="red"> patience </font> , <font color="red">  automated tests </font> , <font color="green">  js </font> , </p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Tester position" type="checkbox" name="Interview fail" value="true">Failed interview</p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Tester position" type="checkbox" name="Inteview" value="true">Passed interview</p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Tester position" type="checkbox" name="Invite" value="true">Invited to dosje</p><br><p scope="row" data-step="5" data-intro="Information and tasks for every vacancy (in this case Dosje developer)" style="margin-bottom:5px;"><span class="descr">Vacancy:</span> <b>Dosje developer</b><br><span class="descr">Keywords:</span><font color="green"> php </font> , <font color="red">  ruby </font> , <font color="red">  html </font> , </p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Dosje developer" type="checkbox" name="Interview fail" value="true">Failed interview</p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Dosje developer" type="checkbox" name="Inteview" value="true">Passed interview</p><p class="desje-checbox" scope="row"><input class="task_updater" vac_name="Dosje developer" type="checkbox" name="Invite" value="true">Invited to dosje</p></div>
+   <div data-intro="This is comment block , here you can see last 5 comments about this person" class="dosje-coments">
+      <h3>Comments:</h3>
+   <p scope="row"><span vac="none" class="fromNow">a few seconds ago</span>  :  this comment</p></div>
+   <div class="dosje-buttons"></div>
 <span data-intro="And this is basic commenting buttons">
     <div class="katy-button-group button-group-secondary comment_person">comment</div>
 </span></div>
@@ -34,7 +34,32 @@
         <a href="#" class="block-logo">Dosje.in</a>
         <div class="tab">
             <div id="tab-1" class="tab-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sit amet purus urna. Proin dictum fringilla enim, sit amet suscipit dolor dictum in. Maecenas porttitor, est et malesuada congue, ligula elit fermentum massa, sit amet porta odio est at velit. Sed nec turpis neque. Fusce at mi felis, sed interdum tortor. Nullam pretium, est at congue mattis, nibh eros pharetra lectus, nec posuere libero dui consectetur arcu. Quisque convallis facilisis fermentum. Nam tincidunt, diam nec dictum mattis, nunc dolor ultrices ipsum, in mattis justo turpis nec ligula. Curabitur a ante mauris. Integer placerat imperdiet diam, facilisis pretium elit mollis pretium. Sed lobortis, eros non egestas suscipit, dui dui euismod enim, ac ultricies arcu risus at tellus. Donec imperdiet congue ligula, quis vulputate mauris ultrices non. Aliquam rhoncus, arcu a bibendum congue, augue risus tincidunt massa, vel vehicula diam dolor eget felis.</p>
+                <article class="vacancy-tile">
+                    <h3>Software developer</h3>
+                    <p>Sallary range: 900 to 1200</p>
+                    <p>Required skillset: php, html, Java, Ruby, js, css</p>
+                    <p>Other info: job in Riga with eng lang necessity <a href="#">full description</a></p>
+                    <ul>
+                        <li>invite to linkedin, statuss: not connected</li>
+                        <li>send vacancy description, statuss: not sent</li>
+                        <li>request unpdated CV, statuss: cv updated 12.09.2012</li>
+                        <li>invite to interview, statuss: not accepted for interview</li>
+                        <li>hire, statuss: not aproved for hire</li>
+                    </ul> 
+                </article>
+                <article class="vacancy-tile">
+                    <h3>Software development manager</h3>
+                    <p>Sallary range: 900 to 1200</p>
+                    <p>Required skillset: php, html, Java, Ruby, js, css</p>
+                    <p>Other info: job in Riga with eng lang necessity <a href="#">full description</a></p>
+                    <ul>
+                        <li>invite to linkedin, statuss: not connected</li>
+                        <li>send vacancy description, statuss: not sent</li>
+                        <li>request unpdated CV, statuss: cv updated 12.09.2012</li>
+                        <li>invite to interview, statuss: not accepted for interview</li>
+                        <li>hire, statuss: not aproved for hire</li>
+                    </ul> 
+                </article>
             </div>
             <div id="tab-2" class="tab-content">
                 <p>Donec semper dictum sem, quis pretium sem malesuada non. Proin venenatis orci vel nisl porta sollicitudin. Pellentesque sit amet massa et orci malesuada facilisis vel vel lectus. Etiam tristique volutpat auctor. Morbi nec massa eget sem ultricies fermentum id ut ligula. Praesent aliquet adipiscing dictum. Suspendisse dignissim dui tortor. Integer faucibus interdum justo, mattis commodo elit tempor id. Quisque ut orci orci, sit amet mattis nulla. Suspendisse quam diam, feugiat at ullamcorper eget, sagittis sed eros. Proin tortor tellus, pulvinar at imperdiet in, egestas sed nisl. Aenean tempor neque ut felis dignissim ac congue felis viverra. </p>
