--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="dosje-tabs-container">
         <nav class="tabs-menu cf">
            <a class="current" href="#tab-1">Vacancy Details</a>
-            <a href="#tab-2">Comments</a>
+            <a href="#tab-2">History</a>
             <a href="#tab-3">Contact</a>
         </nav>
         <a href="#" class="block-logo">Dosje.in</a>
@@ -80,7 +80,7 @@
 
                 <section class="comments-tab">
 
-                    <article>
+                    <article class="dosje-underline">
                         <form class="dosje-form dosje-comments cf">
                             <label class="dosje-label" for="dosje-comment-headding">Subject:</label>
                             <input class="dosje-input" id="dosje-comment-headding" type="text" name="subject">
@@ -88,6 +88,7 @@
                             <textarea rows="3" class="dosje-input dosje-comment-textfield"
                                    id="dosje-comment"
                                    name="comment-text"></textarea>
+                            <p class="dosje-left dosje-info-exp">*comments are only seen by you <a href="#">more info</a></p>
                             <button class="button button-blue dosje-login-button dosje-right" style="margin:0;">Comment
                             </button>
                         </form>
