--- a/index.html
+++ b/index.html
@@ -150,7 +150,21 @@
 
             </div>
             <div id="tab-3" class="tab-content">
-                <p>Duis egestas fermentum ipsum et commodo. Proin bibendum consectetur elit, hendrerit porta mi dictum eu. Vestibulum adipiscing euismod laoreet. Vivamus lobortis tortor a odio consectetur pulvinar. Proin blandit ornare eros dictum fermentum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur laoreet, ante aliquet molestie laoreet, lectus odio fringilla purus, id porttitor erat velit vitae mi. Nullam posuere nunc ut justo sollicitudin interdum. Donec suscipit eros nec leo condimentum fermentum. Nunc quis libero massa. Integer tempus laoreet lectus id interdum. Integer facilisis egestas dui at convallis. Praesent elementum nisl et erat iaculis a blandit ligula mollis. Vestibulum vitae risus dui, nec sagittis arcu. Nullam tortor enim, placerat quis eleifend in, viverra ac lacus. Ut aliquam sapien ut metus hendrerit auctor dapibus justo porta. </p>
+                <section class="dosje-contacts">
+                        <h3>Contact details</h3>
+                    <article>
+                        <p><span>Phone: </span>+317 3343434536</p>
+                        <p><span>Email: </span><a href="mailto:someone@example.com?Subject=Hello%20again">dosje@dosje.com</a></p>
+                        <p><span>Dosje.in profile: </span><a href="#">link to profile</a></p>
+                        <p><span>Website: </span><a href="#">www.site.com</a></p>
+                        <p><span>Country: </span>Latvia</p>
+                        <p><span>City: </span>Riga</p>
+                    </article>
+                    <article>
+                        <h4>Additional notes</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                    </article>
+                </section>
             </div>
         </div>
     </div>
